# local-policy-rag

./: .gitignore  LICENSE  README.md  app_scaled.py  generate_data.py  ingest_scaled.py  pyproject.toml
data/: remote_work_policy.md  travel_expense_policy.md
