[project]
name = "local-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "markdown>=3.10",
    "ollama>=0.6.1",
    "streamlit>=1.51.0",
    "unstructured>=0.18.21",
]
